--- a/Camera_PhotoLibrary/Info.plist
+++ b/Camera_PhotoLibrary/Info.plist
@@ -21,5 +21,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>App wants Access  to your Camera</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>App wants Access to your Photo</string>
 </dict>
 </plist>
