--- a/Camera_PhotoLibrary/Info.plist
+++ b/Camera_PhotoLibrary/Info.plist
@@ -21,5 +21,10 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>ask user for photo library</string>
+	<key>Privacy - Camera Usage Description
+</key>
+	<string>ask user for camera roll</string>
 </dict>
 </plist>
