--- a/Camera_PhotoLibrary/Info.plist
+++ b/Camera_PhotoLibrary/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>For asking user to take photo from Camera Role</string>
+	<key>Privacy - Photo Library Usage Description
+</key>
+	<string>For choosing phto from library</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
